fixed to include lasers on the robot with the correct laser distance

--- a/hlpr_poli/poli_description/package.xml
+++ b/hlpr_poli/poli_description/package.xml
@@ -33,6 +33,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>urdf</run_depend>
   <run_depend>xacro</run_depend>
+  <run_depend>vector_description</run_depend>
 
 
 
