--- a/hlpr_poli/poli_navigation/poli_bringup/package.xml
+++ b/hlpr_poli/poli_navigation/poli_bringup/package.xml
@@ -9,6 +9,8 @@
   <license>BSD</license>
 
 
+  <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>bwi_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
